# django-admin-bootstrap-feincms

./: .gitignore  AUTHORS  ChangeLog  MANIFEST.in  README.rst  requirements.txt  setup.cfg
bootstrap_admin_feincms/static/feincms/: item_editor.css
bootstrap_admin_feincms/templates/admin/feincms/: content_editor.html  content_inline.html  directory_listing.html
